4 September 2017: Wouter
	- tag 1.6.6rc1
	- makedist fix for windows binaries, with openssl 1.1.0 windres fix,
	  and expat 2.2.4 install target fix.

1 September 2017: Wouter
	- Recommend 1472 buffer size in unbound.conf

31 August 2017: Wouter
	- Fix #1424: cachedb:testframe is not thread safe.
	- For #1417: escape ; in dnscrypt tests.
	- but reverted that, tests fails with that escape.
	- Fix #1417: [dnscrypt] shared secret cache counters, and works when
	  dnscrypt is not enabled.  And cache size configuration option.
	- make depend
	- Fix #1418: [ip ratelimit] initialize slabhash using
	  ip-ratelimit-slabs.

30 August 2017: Wouter
	- updated contrib/fastrpz.patch to apply with configparser changes.
	- Fix 1416: qname-minimisation breaks TLSA lookups with CNAMEs.

29 August 2017: Wouter
	- Fix #1414: fix segfault on parse failure and log_replies.
	- zero qinfo in handle_request, this zeroes local_alias and also the
	  qname member.
	- new keys and certs for dnscrypt tests.
	- fixup WKS test on buildhost without servicebyname.

28 August 2017: Wouter
	- Fix #1415: patch to free dnscrypt environment on reload.
	- iana portlist update
	- Fix #1415: [dnscrypt] shared secret cache, patch from
	  Manu Bretelle.
	- Small fixes for the shared secret cache patch.
	- Fix WKS records on kvm autobuild host, with default protobyname
	  entries for udp and tcp.

23 August 2017: Wouter
	- Fix #1407: Add ECS options check to unbound-checkconf.
	- make depend
	- Fix to reclaim tcp handler when it is closed due to dnscrypt buffer
	  allocation failure.

22 August 2017: Wouter
	- Fix install of trust anchor when two anchors are present, makes both
	  valid. Checks hash of DS but not signature of new key. This fixes
	  the root.key file if created when unbound is installed between
	  sep11 and oct11 2017.
	- tag 1.6.5 with pointrelease 1.6.5 (1.6.4 plus 5011 fix).
	- trunk version 1.6.6 in development.
	- Fix issue on macOX 10.10 where TCP fast open is detected but not