@@ -1,3 +1,6 @@
+4 September 2017: Ralph
+	- Fix #1412: QNAME minimisation strict mode not honored
+
 4 September 2017: Wouter
 	- tag 1.6.6rc1
 	- makedist fix for windows binaries, with openssl 1.1.0 windres fix,
